--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "PSY 6422 Project"
-# author: "Shawn Advani"
-# Registration number: "240188991"
 date: "`r Sys.Date()`"
 output:
   html_document:
@@ -461,11 +459,7 @@ graphing_scores <- function(df=df, name='base') {
 ```
 
 ## Final Visualisation
-```{r echo=FALSE, message=TRUE, warning=TRUE}
-knitr::include_app('https://shawnadvani.shinyapps.io/UoS_data_analysis_project/')
-```
-<!-- ![Representation of Chart](figs/viz240188991.png) -->
-<!-- The graph includes interactive filtering options using the following block of code. -->
+removed to remain anonymous during grading
 
 ```{r run_app, echo=TRUE, message=FALSE, warning=FALSE}
 # add labels for the filter option
